# lexis-local

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  index.html  package-lock.json  package.json  plan.md  session-ses_0ada.md  vite.config.ts
docs/: api-reference.md  architecture.md  workflow.md
docs/agents/: domain.md
docs/reports/: module-page-audit.md
src/: App.tsx  globals.css  log.ts  modules.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  commands.rs  db.rs  documents.rs  extractor.rs  ingest.rs  lib.rs  main.rs  models.rs  pipeline.rs  repo.rs
src-tauri/tests/: sidecar.rs
src/components/: ChatPanel.tsx  DocumentList.tsx  FilePicker.tsx  Home.tsx  InsightsPanel.tsx  KnowledgePanel.tsx  LogPanel.tsx  ModelLibrary.tsx  NavRail.tsx  PdfViewer.tsx
src/hooks/: useTauriCommand.ts
