[package]
name = "lexis-local"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lexis_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2", default-features = false, features = ["kv-surrealkv"] }
tokio = { version = "1", features = ["full"] }
pdf-extract = "0.7"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[dev-dependencies]
# `test` enables tauri::test::mock_builder for the sidecar lifecycle test.
tauri = { version = "2", features = ["test"] }


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
